--- a/index.html
+++ b/index.html
@@ -1,125 +1,75 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>map created with amCharts | amCharts</title>
-		<meta name="description" content="map created using amCharts pixel map generator" />
+<head>
+    <title>Map for Canva</title>
+    <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
+    <script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
+    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 
-		<script type="text/javascript" src="https://www.amcharts.com/lib/3/ammap.js"></script>
-		<script type="text/javascript" src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: #505050; /* 匹配你地图的灰色背景 */
+            overflow: hidden;
+        }
+        #map {
+            width: 100%;
+            height: 100vh;
+        }
+    </style>
+</head>
+<body>
+    <div id="map"></div>
 
-		<script type="text/javascript">
-			AmCharts.makeChart("map",{
-					"type": "map",
-					"pathToImages": "https://www.amcharts.com/lib/3/images/",
-					"addClassNames": true,
-					"fontSize": 15,
-					"color": "#FFFFFF",
-					"projection": "mercator",
-					"backgroundAlpha": 1,
-					"backgroundColor": "rgba(80,80,80,1)",
-					"dataProvider": {
-						"map": "worldLow",
-						"getAreasFromMap": true,
-						"images": [
-							{
-								"top": 40,
-								"left": 60,
-								"width": 80,
-								"height": 40,
-								"pixelMapperLogo": true,
-								"imageURL": "https://pixelmap.amcharts.com/static/img/logo.svg",
-								"url": "https://www.amcharts.com"
-							}
-						],
-						"areas": [
-							{ "id": "AR", "title": "Argentina", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "AT", "title": "Austria", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "AU", "title": "Australia", "color": "rgba(216,75,75,0.8)" },
-							{ "id": "BE", "title": "Belgium", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "BR", "title": "Brazil", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "CA", "title": "Canada", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "CH", "title": "Switzerland", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "CN", "title": "China", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "CZ", "title": "Czechia", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "DE", "title": "Germany", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "DK", "title": "Denmark", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "EE", "title": "Estonia", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "ES", "title": "Spain", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "FI", "title": "Finland", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "FR", "title": "France", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "GB", "title": "United Kingdom", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "HR", "title": "Croatia", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "HU", "title": "Hungary", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "IT", "title": "Italy", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "JP", "title": "Japan", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "KR", "title": "South Korea", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "LT", "title": "Lithuania", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "LV", "title": "Latvia", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "MX", "title": "Mexico", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "NL", "title": "Netherlands", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "NO", "title": "Norway", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "NZ", "title": "New Zealand", "color": "rgba(216,75,75,0.8)" },
-							{ "id": "PE", "title": "Peru", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "PL", "title": "Poland", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "PT", "title": "Portugal", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "RO", "title": "Romania", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "SE", "title": "Sweden", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "SI", "title": "Slovenia", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "SK", "title": "Slovakia", "color": "rgba(75,216,181,0.8)" },
-							{ "id": "TH", "title": "Thailand", "color": "rgba(75,104,216,0.8)" },
-							{ "id": "US", "title": "United States", "color": "rgba(75,216,181,0.8)" }
-						]
-					},
-					"balloon": {
-						"horizontalPadding": 15,
-						"borderAlpha": 0,
-						"borderThickness": 1,
-						"verticalPadding": 15
-					},
-					"areasSettings": {
-						"color": "rgba(129,129,129,1)",
-						"outlineColor": "rgba(80,80,80,1)",
-						"rollOverOutlineColor": "rgba(80,80,80,1)",
-						"rollOverBrightness": 20,
-						"selectedBrightness": 20,
-						"selectable": true,
-						"unlistedAreasAlpha": 0,
-						"unlistedAreasOutlineAlpha": 0
-					},
-					"imagesSettings": {
-						"alpha": 1,
-						"color": "rgba(129,129,129,1)",
-						"outlineAlpha": 0,
-						"rollOverOutlineAlpha": 0,
-						"outlineColor": "rgba(80,80,80,1)",
-						"rollOverBrightness": 20,
-						"selectedBrightness": 20,
-						"selectable": true
-					},
-					"linesSettings": {
-						"color": "rgba(129,129,129,1)",
-						"selectable": true,
-						"rollOverBrightness": 20,
-						"selectedBrightness": 20
-					},
-					"zoomControl": {
-						"zoomControlEnabled": true,
-						"homeButtonEnabled": false,
-						"panControlEnabled": false,
-						"right": 38,
-						"bottom": 30,
-						"minZoomLevel": 0.25,
-						"gridHeight": 100,
-						"gridAlpha": 0.1,
-						"gridBackgroundAlpha": 0,
-						"gridColor": "#FFFFFF",
-						"draggerAlpha": 1,
-						"buttonCornerRadius": 2
-					}
-				});
-		</script>
-	</head>
-	<body style="margin: 0;background-color: rgba(80,80,80,1);">
-		<div id="map" style="width: 100%; height: 100vh;"></div>
-	</body>
+    <script>
+        // 添加简单的报错检查
+        window.onerror = function(msg) {
+            alert("加载地图出错: " + msg);
+        };
+
+        var chart = AmCharts.makeChart("map", {
+            "type": "map",
+            "theme": "light",
+            "projection": "mercator",
+            "backgroundColor": "#505050",
+            "backgroundAlpha": 1,
+            "dataProvider": {
+                "map": "worldLow",
+                "getAreasFromMap": true,
+                "areas": [
+                    { "id": "AR", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "AT", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "AU", "color": "rgba(216,75,75,0.8)" },
+                    { "id": "BE", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "BR", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "CA", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "CH", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "CN", "color": "rgba(75,104,216,0.8)" },
+                    { "id": "DE", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "FR", "color": "rgba(75,216,181,0.8)" },
+                    { "id": "GB", "color": "rgba(75,104,216,0.8)" },
+                    { "id": "JP", "color": "rgba(75,104,216,0.8)" },
+                    { "id": "KR", "color": "rgba(75,104,216,0.8)" },
+                    { "id": "TH", "color": "rgba(75,104,216,0.8)" },
+                    { "id": "US", "color": "rgba(75,216,181,0.8)" }
+                ]
+            },
+            "areasSettings": {
+                "autoZoom": true,
+                "color": "#818181",
+                "outlineColor": "#505050",
+                "rollOverColor": "#CC0000",
+                "selectedColor": "#000000"
+            },
+            "zoomControl": {
+                "zoomControlEnabled": true,
+                "right": 20,
+                "bottom": 20
+            }
+        });
+    </script>
+</body>
 </html>
